Added Unit Vector Calculator
refactored code.
added global setting for output decimal places

--- a/index.html
+++ b/index.html
@@ -14,21 +14,36 @@
         <li><a href="javascript: show('cross-product');">Cross Product</a></li>
       </ul>
 
+      <div>
+        Decimal Places: <input id="d_place" type="number" min="1" value="4" />
+      </div>
+      
       <div id="vectors" class="topic">
         <h1>Vectors</h1>
         <div id="vector-magnitude">
           <h2>Vector Magnitude</h2>
           <div>
-            Components: <input type="number" value="1" min="1" max="3" id="components" /> <br />
+            Components: <input type="number" value="2" min="1" max="3" id="components" /> <br />
             <div id="input"></div>
           </div>
           <p id="output"></p>
-          <hr />
+        </div>
+        <hr />
+
+        <div id="unit-vector">
+          <h2>Unit Vector</h2>
+          <div>
+            Components: <input type="number" value="2" min="1" max="3" id="components" /> <br />
+            <div id="input"></div>
+          </div>
+          <p id="output"></p>
         </div>
       </div>
+
       <div id="dot-product" class="topic">
         <h1>Dot Product</h1>
       </div>
+
       <div id="cross-product" class="topic">
         <h1>Cross Product</h1>
       </div>
