--- a/index.html
+++ b/index.html
@@ -4,59 +4,97 @@
     <title>Mathtugatuga</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet" media="screen">
+ 
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+		<script src="../../assets/js/html5shiv.js"></script>
+		<script src="../../assets/js/respond.min.js"></script>
+		<![endif]-->
+ 
   </head>
   <body>
-    <div id='container'>
-      <h1>Welcome to Mathtugatuga!</h1>
-      <ul id="nav">
-        <li><a href="javascript: show('vector-magnitude');">Vector Magnitude</a></li>
-        <li><a href="javascript: show('unit-vector');">Unit Vector</a></li>
-        <li><a href="javascript: show('vector-algebra');">Vector Algebra</a></li>
-      </ul>
+    <div class='container'>
 
-      <div>
-        Decimal Places: <input id="d_place" type="number" min="1" value="4" />
-      </div>
-      
-      <div id="vectors">
-        <h1>Vectors</h1>
-        <div id="vector-magnitude" class="topic">
-          <h2>Vector Magnitude</h2>
-          <div>
-            Components: <input type="number" value="2" min="1" max="3" id="components" /> <br />
-            <div id="input"></div>
-          </div>
-          <p id="output"></p>
-          <hr />
-        </div>
+			<div class="jumbotron">
+				<div class="container">
+					<h1 class="text-center">Welcome to Mathtugatuga!</h1>
+					<p class="text-center">A simple web application where the basics of Electromagnetics is applied</p>
+				</div>
+			</div>
 
-        <div id="unit-vector" class="topic">
-          <h2>Unit Vector</h2>
-          <div>
-            Components: <input type="number" value="2" min="1" max="3" id="components" /> <br />
-            <div id="input"></div>
-          </div>
-          <p id="output"></p>
-          <hr />
-        </div>
+			<div class="well container">
+				<div class="input-group input-group-md col-md-4 col-md-push-8">
+					<span class="input-group-addon">Decimal Places</span>
+					<input type="number" class="form-control input-md text-right" id="d_place" type="number" min="0" value="4" />
+				</div>
+			</div>
 
-        <div id="vector-algebra" class="topic">
-          <h2>Vector Algebra</h2>
-          <div>
-            <div>
-              Vectors: <input type="number" value="2" min="2" max="3" id="vector_num" /> <br />
-              Components: <input type="number" value="2" min="1" max="3" id="components" /> <br />
-              <div id="vectors"></div>
+			<div class="panel-group" id="accordion">
+				<div class="panel panel-primary">
+					<div class="panel-heading"><h4 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Vector Magnitude</a></h4></div>
+					<div id="collapseOne" class="panel-collapse collapse in">
+						<div id="vector-magnitude" class="panel-body">
 
-            </div>
-          </div>
-          <p id="output"></p>
-          <hr />
-        </div>
-      </div>
+								<div class="row">
+									<div class="input-group input-group-md col-md-4 col-md-push-8">
+										<span class="input-group-addon">Components</span>
+										<input type="number" class="form-control input-md text-right" value="2" min="1" max="3" id="components"/><br />
+									</div>
+								</div>
+								<div class="row">
+									<div id="input"></div>
+								</div>
+								<hr />
+								<div class="well" id="output"></div>
+
+						</div>
+					</div>
+				</div>
+
+				<div class="panel panel-primary">
+					<div class="panel-heading"><h4 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Unit Vector</a></h4></div>
+					<div id="collapseTwo" class="panel-collapse collapse">
+						<div id="unit-vector" class="panel-body">
+
+								<div class="row">
+									<div class="input-group input-group-md col-md-4 col-md-push-8">
+										<span class="input-group-addon">Components</span>
+										<input type="number" class="form-control input-md text-right" value="2" min="1" max="3" id="components"/><br />
+									</div>
+								</div>
+								<div class="row">
+									<div id="input"></div>
+								</div>
+								<hr />
+								<div class="well" id="output"></div>
+
+						</div>
+					</div>
+				</div>
+
+				<div class="panel panel-primary">
+					<div class="panel-heading"><h4 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Vector Algebra</a></h4></div>
+					<div id="collapseThree" class="panel-collapse collapse">
+						<div id="vector-algebra" class="panel-body">
+
+							<div>
+								Vectors: <input type="number" value="2" min="2" max="3" id="vector_num" /> <br />
+								Components: <input type="number" value="2" min="1" max="3" id="components" /> <br />
+								<div id="vectors"></div>
+							</div>
+							<div id="output" class="well"></div>
+
+						</div>
+					</div>
+				</div>
+
+			</div>
     </div>
 
     <script src="js/jquery-1.10.2.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
