working version with ui

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 				<div class="input-group input-group-md col-md-4 col-md-push-8">
 					<span class="input-group-addon">Decimal Places</span>
 					<input type="number" class="form-control input-md text-right" id="d_place" type="number" min="0" value="4" />
+					<span class="input-group-addon"><span class="glyphicon glyphicon-cog"></span></span>
 				</div>
 			</div>
 
 			<div class="panel-group" id="accordion">
 				<div class="panel panel-primary">
 					<div class="panel-heading"><h4 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Vector Magnitude</a></h4></div>
-					<div id="collapseOne" class="panel-collapse collapse in">
+					<div id="collapseOne" class="panel-collapse collapse">
 						<div id="vector-magnitude" class="panel-body">
 
 								<div class="row">
@@ -79,7 +80,6 @@
 					<div class="panel-heading"><h4 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Vector Algebra</a></h4></div>
 					<div id="collapseThree" class="panel-collapse collapse">
 						<div id="vector-algebra" class="panel-body">
-
 
 								<div class="row">
 									<div class="input-group input-group-md col-md-6">
