--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="well container">
 				<div class="input-group input-group-md col-md-4 col-md-push-8">
 					<span class="input-group-addon">Decimal Places</span>
-					<input type="number" class="form-control input-md text-right" id="d_place" type="number" min="0" value="4" />
+					<input type="number" class="form-control input-md text-right" id="d_place" type="number" min="0" value="4" data-toggle="tooltip" title="Update this value to set the decimal place of the output or result" />
 					<span class="input-group-addon"><span class="glyphicon glyphicon-cog"></span></span>
 				</div>
 			</div>
@@ -42,7 +42,7 @@
 								<div class="row">
 									<div class="input-group input-group-md col-md-4 col-md-push-8">
 										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-md text-right" value="2" min="1" max="3" id="components"/><br />
+										<input type="number" class="form-control input-md text-right cmp" value="2" min="1" max="3" id="components" /><br />
 									</div>
 								</div>
 								<div class="row">
@@ -63,7 +63,7 @@
 								<div class="row">
 									<div class="input-group input-group-md col-md-4 col-md-push-8">
 										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-md text-right" value="2" min="1" max="3" id="components"/><br />
+										<input type="number" class="form-control input-md text-right cmp" value="2" min="1" max="3" id="components"/><br />
 									</div>
 								</div>
 								<div class="row">
@@ -84,11 +84,11 @@
 								<div class="row">
 									<div class="input-group input-group-md col-md-6">
 										<span class="input-group-addon">Vectors</span>
-										<input type="number" class="form-control input-md text-right" value="2" min="2" max="3" id="vector_num" />
+										<input type="number" class="form-control input-md text-right vct" value="2" min="2" max="3" id="vector_num" />
 									</div>
 									<div class="input-group input-group-md col-md-6">
 										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-md text-right" value="2" min="1" max="3" id="components" />
+										<input type="number" class="form-control input-md text-right cmp" value="2" min="1" max="3" id="components" />
 									</div>
 								</div>
 								<div class="row">
