Added footer. updated decimal place tooltip. readme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  
   </head>
   <body>
+  	<div id="wrap">
     <div class='container'>
 
 			<div class="jumbotron">
@@ -101,8 +102,16 @@
 					</div>
 				</div>
 
+				<div id="push"></div>
 			</div>
-    </div>
+			</div>
+
+			<div id="footer">
+				<div class="container">
+					<p class="muted credit text-center">Mathtugatuga v1.0 &copy; 2013 by Gervel Giva. Source code is available <a href="https://github.com/blackzky/mathtugatuga">here.</a></p>
+				</div>
+			</div>
+
 
     <script src="js/jquery-1.10.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
