updated ui to display properly on tablets

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 			</div>
 
 			<div class="well container">
-				<div class="input-group input-group-md col-md-4 col-md-push-8">
+				<div class="input-group input-group-sm col-sm-4 col-sm-push-8">
 					<span class="input-group-addon">Decimal Places</span>
-					<input type="number" class="form-control input-md text-right" id="d_place" type="number" min="0" value="4" data-toggle="tooltip" title="Update this value to set the decimal place of the output or result" />
+					<input type="number" class="form-control input-sm text-right" id="d_place" type="number" min="0" value="4" data-toggle="tooltip" title="Update this value to set the decimal place of the output or result" />
 					<span class="input-group-addon"><span class="glyphicon glyphicon-cog"></span></span>
 				</div>
 			</div>
@@ -41,9 +41,9 @@
 						<div id="vector-magnitude" class="panel-body">
 
 								<div class="row">
-									<div class="input-group input-group-md col-md-4 col-md-push-8">
+									<div class="input-group input-group-sm col-sm-4 col-sm-push-8">
 										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-md text-right cmp" value="2" min="1" max="3" id="components" /><br />
+										<input type="number" class="form-control input-sm text-right cmp" value="2" min="1" max="3" id="components" /><br />
 									</div>
 								</div>
 								<div class="row">
@@ -62,9 +62,9 @@
 						<div id="unit-vector" class="panel-body">
 
 								<div class="row">
-									<div class="input-group input-group-md col-md-4 col-md-push-8">
+									<div class="input-group input-group-sm col-sm-4 col-sm-push-8">
 										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-md text-right cmp" value="2" min="1" max="3" id="components"/><br />
+										<input type="number" class="form-control input-sm text-right cmp" value="2" min="1" max="3" id="components"/><br />
 									</div>
 								</div>
 								<div class="row">
@@ -83,13 +83,13 @@
 						<div id="vector-algebra" class="panel-body">
 
 								<div class="row">
-									<div class="input-group input-group-md col-md-6">
+									<div class="input-group input-group-sm col-sm-6">
 										<span class="input-group-addon">Vectors</span>
-										<input type="number" class="form-control input-md text-right vct" value="2" min="2" max="3" id="vector_num" />
+										<input type="number" class="form-control input-sm text-right vct" value="2" min="2" max="3" id="vector_num" />
 									</div>
-									<div class="input-group input-group-md col-md-6">
+									<div class="input-group input-group-sm col-sm-6">
 										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-md text-right cmp" value="2" min="1" max="3" id="components" />
+										<input type="number" class="form-control input-sm text-right cmp" value="2" min="1" max="3" id="components" />
 									</div>
 								</div>
 								<div class="row">
