--- a/index.html
+++ b/index.html
@@ -41,13 +41,7 @@
 						<div id="vector-magnitude" class="panel-body">
 
 								<div class="row">
-									<div class="input-group input-group-sm col-sm-4 col-sm-push-8">
-										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-sm text-right cmp" value="2" min="1" max="3" id="components" /><br />
-									</div>
-								</div>
-								<div class="row">
-									<div id="input"></div>
+									<div class="container vector-input-parent"></div>
 								</div>
 								<hr />
 								<div class="well" id="output"></div>
@@ -62,13 +56,7 @@
 						<div id="unit-vector" class="panel-body">
 
 								<div class="row">
-									<div class="input-group input-group-sm col-sm-4 col-sm-push-8">
-										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-sm text-right cmp" value="2" min="1" max="3" id="components"/><br />
-									</div>
-								</div>
-								<div class="row">
-									<div id="input"></div>
+									<div class="container vector-input-parent"></div>
 								</div>
 								<hr />
 								<div class="well" id="output"></div>
@@ -83,17 +71,7 @@
 						<div id="vector-algebra" class="panel-body">
 
 								<div class="row">
-									<div class="input-group input-group-sm col-sm-6">
-										<span class="input-group-addon">Vectors</span>
-										<input type="number" class="form-control input-sm text-right vct" value="2" min="2" max="3" id="vector_num" />
-									</div>
-									<div class="input-group input-group-sm col-sm-6">
-										<span class="input-group-addon">Components</span>
-										<input type="number" class="form-control input-sm text-right cmp" value="2" min="1" max="3" id="components" />
-									</div>
-								</div>
-								<div class="row">
-									<div id="vectors" class="container"></div>
+									<div class="container vector-input-parent"></div>
 								</div>
 								<hr />
 								<div class="well" id="output"></div>
@@ -115,6 +93,7 @@
 
     <script src="js/jquery-1.10.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
+    <script src="js/Vector.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
