--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<div class="container vector-input-parent"></div>
 								</div>
 								<hr />
-								<div class="well" id="output"></div>
+								<div class="well output"></div>
 
 						</div>
 					</div>
@@ -59,7 +59,7 @@
 									<div class="container vector-input-parent"></div>
 								</div>
 								<hr />
-								<div class="well" id="output"></div>
+								<div class="well output"></div>
 
 						</div>
 					</div>
@@ -74,7 +74,7 @@
 									<div class="container vector-input-parent"></div>
 								</div>
 								<hr />
-								<div class="well" id="output"></div>
+								<div class="well output"></div>
 
 						</div>
 					</div>
@@ -86,7 +86,7 @@
 
 			<div id="footer">
 				<div class="container">
-					<p class="muted credit text-center">Mathtugatuga v1.01 &copy; 2013 by Gervel Giva. Source code is available <a href="https://github.com/blackzky/mathtugatuga">here.</a></p>
+					<p class="muted credit text-center">Mathtugatuga v1.02 &copy; 2013 by Gervel Giva. Source code is available <a href="https://github.com/blackzky/mathtugatuga">here.</a></p>
 				</div>
 			</div>
 
